--- a/asjio.css
+++ b/asjio.css
@@ -62,8 +62,8 @@ body {
 
 #formula-builder-footer {
     padding: 2px 16px;
-    background-color: #002a32;
-    color: white;
+    background-color: #f40076;
+    color: black;
 }
 #formula-builder-body img {
     width:30%;
