--- a/asjio.css
+++ b/asjio.css
@@ -60,35 +60,132 @@ body {
 
 .modal-body {padding: 2px 16px;}
 
+#formula-builder-body{
+	display:grid;
+	grid-gap:0px;
+	grid-template-columns: 20% auto auto auto auto;
+	background:#c4a29e;
+}
+#formula-builder-body div{
+	border:1px solid #002a32;
+}
+#a{
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	text-transform: uppercase;
+	background:#002a32;
+	color:white;
+	text-align:center;
+	border-bottom:1px solid white;
+}
+#b{
+	grid-column-start: 5;
+	grid-column-end: 6;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	text-transform: uppercase;
+	background:#002a32;
+	color:white;
+}
+#log{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+#qua{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+#var{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 4;
+}
+#rel{
+	grid-column-start: 3;
+	grid-column-end: 4;
+	grid-row-start: 2;
+	grid-row-end: 4;
+
+}
+#exp{
+	grid-column-start: 4;
+	grid-column-end: 5;
+	grid-row-start: 2;
+	grid-row-end: 4;
+
+}
+#loc{
+	grid-column-start: 5;
+	grid-column-end: 6;
+	grid-row-start: 2;
+	grid-row-end: 4;
+
+}
+
+h1{
+	font-size:1em;
+	text-transform: uppercase;
+	background:#002a32;
+	color:white;
+	text-align:center;
+	margin:0 0 0 0;
+}
+#formula-builder-content img {
+    width:100%;
+    height:20px;
+    margin-top:10px;
+    margin-bottom:10px;
+	padding-top:5px;
+	padding-bottom:5px;
+	display:block;
+	margin-left: auto;
+    margin-right: auto;
+
+}
+
 #formula-builder-footer {
     padding: 2px 16px;
     background-color: #f40076;
     color: black;
+	display:grid;
+	grid-template-columns: auto auto auto;
+	grid-template-rows: 50px auto;
 }
-#formula-builder-body img {
-    width:30%;
-    height:20px;
-    margin:10px;
+#img-result{
+	grid-column-start: 1;
+	grid-column-end: 4;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	margin-left: auto;
+    margin-right: auto;
+	margin-top: auto;
+    margin-bottom: auto;
+	height:25px;
+
 }
 
-#formula-builder-body{
-  background:#c4a29e;
+#formula-builder-footer button{
+    height:40px;
+    width:100px;
+	margin-left: auto;
+    margin-right: auto;
+	margin-top: auto;
+    margin-bottom: auto;
 }
+
 
 img:hover{
   background:#ffc6ac;
   outline: 2px solid #002a32;
 }
 
-#button-done{
-    height:40px;
-    width:100px;
-}
 
-ul img{
-    height:20px;
-    width:100%;
-    padding:5px;
-}
 
 }
