--- a/asjio.css
+++ b/asjio.css
@@ -180,6 +180,11 @@ h1{
     margin-bottom: auto;
 }
 
+ul img{
+    height:20px;
+    width:100%;
+    padding:5px;
+}
 
 img:hover{
   background:#ffc6ac;
