--- a/asjio.css
+++ b/asjio.css
@@ -6,191 +6,211 @@
 #f40076 winter sky
 */
 
-
 body {
-  background-color:#c4a29e;
+  background-color: #c4a29e;
 }
 
 #formula-builder {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
 }
 
 /* Modal Content */
-#formula-builder-content {
-    position: relative;
-    background-color: #fff;
-    margin: auto;
-    padding: 0;
-    border: 1px solid #888;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-}
 
+#formula-builder-content {
+  position: relative;
+  background-color: #fff;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 /* The Close Button */
+
 .close {
-    color: white;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+.close:hover, .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 #formula-builder-header {
-    padding: 2px 16px;
-    background-color: #002a32;
-    color: white;
+  padding: 2px 16px;
+  background-color: #002a32;
+  color: white;
 }
 
-.modal-body {padding: 2px 16px;}
-
-#formula-builder-body{
-	display:grid;
-	grid-gap:0px;
-	grid-template-columns: 20% auto auto auto auto;
-	background:#c4a29e;
-}
-#formula-builder-body div{
-	border:1px solid #002a32;
-}
-#a{
-	grid-column-start: 1;
-	grid-column-end: 5;
-	grid-row-start: 1;
-	grid-row-end: 2;
-	text-transform: uppercase;
-	background:#002a32;
-	color:white;
-	text-align:center;
-	border-bottom:1px solid white;
-}
-#b{
-	grid-column-start: 5;
-	grid-column-end: 6;
-	grid-row-start: 1;
-	grid-row-end: 2;
-	text-transform: uppercase;
-	background:#002a32;
-	color:white;
-}
-#log{
-	grid-column-start: 1;
-	grid-column-end: 2;
-	grid-row-start: 2;
-	grid-row-end: 3;
-}
-#qua{
-	grid-column-start: 1;
-	grid-column-end: 2;
-	grid-row-start: 3;
-	grid-row-end: 4;
-}
-#var{
-	grid-column-start: 2;
-	grid-column-end: 3;
-	grid-row-start: 2;
-	grid-row-end: 4;
-}
-#rel{
-	grid-column-start: 3;
-	grid-column-end: 4;
-	grid-row-start: 2;
-	grid-row-end: 4;
-
-}
-#exp{
-	grid-column-start: 4;
-	grid-column-end: 5;
-	grid-row-start: 2;
-	grid-row-end: 4;
-
-}
-#loc{
-	grid-column-start: 5;
-	grid-column-end: 6;
-	grid-row-start: 2;
-	grid-row-end: 4;
-
+.modal-body {
+  padding: 2px 16px;
 }
 
-h1{
-	font-size:1em;
-	text-transform: uppercase;
-	background:#002a32;
-	color:white;
-	text-align:center;
-	margin:0 0 0 0;
+#formula-builder-body {
+  display: grid;
+  grid-gap: 0px;
+  grid-template-columns: 20% auto auto auto auto;
+  background: #c4a29e;
 }
-#formula-builder-content img {
-    width:100%;
-    height:20px;
-    margin-top:10px;
-    margin-bottom:10px;
-	padding-top:5px;
-	padding-bottom:5px;
-	display:block;
-	margin-left: auto;
-    margin-right: auto;
 
+#formula-builder-body div {
+  border: 1px solid #002a32;
+}
+
+#a {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  text-transform: uppercase;
+  background: #002a32;
+  color: white;
+  text-align: center;
+  border-bottom: 1px solid white;
+}
+
+#b {
+  grid-column-start: 5;
+  grid-column-end: 6;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  text-transform: uppercase;
+  background: #002a32;
+  color: white;
+}
+
+#log {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+#qua {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+#var {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+
+#rel {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+
+#exp {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+
+#loc {
+  grid-column-start: 5;
+  grid-column-end: 6;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+
+h1 {
+  font-size: 1em;
+  text-transform: uppercase;
+  background: #002a32;
+  color: white;
+  text-align: center;
+  margin: 0 0 0 0;
 }
 
 #formula-builder-footer {
-    padding: 2px 16px;
-    background-color: #f40076;
-    color: black;
-	display:grid;
-	grid-template-columns: auto auto auto;
-	grid-template-rows: 50px auto;
-}
-#img-result{
-	grid-column-start: 1;
-	grid-column-end: 4;
-	grid-row-start: 1;
-	grid-row-end: 2;
-	margin-left: auto;
-    margin-right: auto;
-	margin-top: auto;
-    margin-bottom: auto;
-	height:25px;
-
+  padding: 2px 16px;
+  background-color: #f40076;
+  color: black;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: 50px auto;
 }
 
-#formula-builder-footer button{
-    height:40px;
-    width:100px;
-	margin-left: auto;
-    margin-right: auto;
-	margin-top: auto;
-    margin-bottom: auto;
+#img-result {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 25px;
 }
 
-ul img{
-    height:20px;
-    width:100%;
-    padding:5px;
+#formula-builder-footer button {
+  height: 40px;
+  width: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
-img:hover{
-  background:#ffc6ac;
+#formula-builder-content article:hover {
+  cursor: pointer;
+  background: #ffc6ac;
   outline: 2px solid #002a32;
 }
 
+#formula-builder-body span {
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-align: center;
+}
 
+ul img {
+  height: 20px;
+  width: 100%;
+  padding: 5px;
+}
+
+ul img:hover {
+  cursor: pointer;
+  background: #ffc6ac;
+  outline: 2px solid #002a32;
+}
+
+ul img:active {
+  cursor: grabbing;
+}
 
 }
