--- a/asjio.css
+++ b/asjio.css
@@ -12,28 +12,18 @@ body {
 
 #formula-builder {
   display: none;
-  /* Hidden by default */
   position: fixed;
-  /* Stay in place */
   z-index: 1;
-  /* Sit on top */
   padding-top: 100px;
-  /* Location of the box */
   left: 0;
   top: 0;
   width: 100%;
-  /* Full width */
   height: 100%;
-  /* Full height */
   overflow: auto;
-  /* Enable scroll if needed */
   background-color: rgb(0, 0, 0);
-  /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
 }
 
-/* Modal Content */
 
 #formula-builder-content {
   position: relative;
@@ -45,7 +35,6 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-/* The Close Button */
 
 .close {
   color: white;
@@ -163,17 +152,6 @@ h1 {
   grid-template-rows: 50px auto;
 }
 
-#img-result {
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: auto;
-  margin-bottom: auto;
-  height: 25px;
-}
 
 #formula-builder-footer button {
   height: 40px;
@@ -212,5 +190,18 @@ ul img:hover {
 ul img:active {
   cursor: grabbing;
 }
+
+#result {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 25px;
+}
+
 
 }
