--- a/asjio.css
+++ b/asjio.css
@@ -131,6 +131,13 @@ body {
   grid-column-start: 5;
   grid-column-end: 6;
   grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+#arg {
+  grid-column-start: 5;
+  grid-column-end: 6;
+  grid-row-start: 3;
   grid-row-end: 4;
 }
 
