--- a/asjio.css
+++ b/asjio.css
@@ -10,7 +10,7 @@ body {
   background-color: #c4a29e;
 }
 
-#formula-builder {
+.modal {
   display: none;
   position: fixed;
   z-index: 1;
@@ -25,7 +25,7 @@ body {
 }
 
 
-#formula-builder-content {
+.modal-content {
   position: relative;
   background-color: #fff;
   margin: auto;
@@ -49,14 +49,10 @@ body {
   cursor: pointer;
 }
 
-#formula-builder-header {
+.modal-header {
   padding: 2px 16px;
   background-color: #002a32;
   color: white;
-}
-
-.modal-body {
-  padding: 2px 16px;
 }
 
 #formula-builder-body {
