--- a/asjio.css
+++ b/asjio.css
@@ -260,5 +260,15 @@ h1 {
   z-index: 1
 }
 
+#new-def-body{
+  background: #c4a29e;
+}
+
+#theorem-manager-body {
+  display: grid;
+  grid-gap: 0px;
+  grid-template-columns: auto auto auto auto;
+  background: #c4a29e;
+}
 
 }
