--- a/asjio.css
+++ b/asjio.css
@@ -264,6 +264,10 @@ h1 {
   background: #c4a29e;
 }
 
+#new-def-body > div {
+  padding:10px;
+}
+
 #theorem-manager-body,#def-manager-body{
   display: grid;
   grid-gap: 0px;
